--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@ APP_NAME=Laravel
 APP_ENV=local
 APP_KEY=base64:jkKzOkHtFX5bCfez3swE/q7+P1uCH6Ujvek6F9L9ZKk=
 APP_DEBUG=true
-APP_URL=estagio-moinho.mysql.uhserver.com
+APP_URL=http://127.0.0.1:8000
 
 LOG_CHANNEL=stack
 
